--- a/templates/firstapp/home.html
+++ b/templates/firstapp/home.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
+    <!-- внутренний стиль-->
     <meta charset="UTF-8">
     <title>Привет Django</title>
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
 </head>
 <body>
-    <h1>Домашняя страница Django</h1>
+    <!-- встроенный стиль-->
+    <h1>домашняя страница django</h1>
     <h2>templates/firstapp/home.html</h2>
+    <img src="{% static 'images/image1.jpg' %}">
 </body>
 </html>
