--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>передача сложных данных</title>
+    <meta charset="utf-8" />
+    <title>Модели в Django</title>
 </head>
-<body>
-    <h1>{{ header }}</h1>
-    <p>Name: {{ user.name }} Age: {{ user.age }}</p>
-    <p>Address: street {{ address.0 }}, house {{ address.1 }} flat {{ address.2 }}</p>
-    <p>Langs: {{ langs.0 }}, {{ langs.1 }}</p>
+<body class="container">
+    <form method="POST" action="create/">
+        {% csrf_token %}
+        <p>
+            <label>Введите имя</label><br>
+            <input type="text" name="name" />
+        </p>
+        <p>
+            <label>Введите возраст</label><br>
+            <input type="number" name="age" />
+        </p>
+        <input type="submit" value="Сохранить" >
+    </form>
+    {% if people.count > 0 %}
+    <h2>Список пользователей</h2>
+    <table>
+        <tr><th>Id</th><th>Имя</th><th>Возраст</th></tr>
+        {% for person in people %}
+        <tr><td>{{ person.id }}</td>
+            <td>{{ person.name }}</td>
+            <td>{{ person.age }}</td></tr>
+        {% endfor %}
+    </table>
+    {% endif %}
 </body>
 </html>
